<resources>
    <string name="app_name">EPROCAD App</string>
    <string name="bt_entrar">Entrar</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="bt_forgotten_password">Esqueci minha senha</string>
    <string name="bt_create_account">Crie sua conta</string>
    <string name="contentDescription_logo">Logo da fundação EPROCAD</string>
    <string name="contentDescription_Bola_azul_inferior">Bola azul inferior</string>
    <string name="contentDescription_Bola_amarela_inferior">Bola amarela inferior</string>
    <string name="contentDescription_Bola_azul_superior">Bola azul superior</string>
    <string name="contentDescription_Bola_amarela_superior">Bola amarela superior</string>
    <string name="bt_Enviar">Enviar</string>
    <string name="text_inserir_email">Insira o E-mail</string>
    <string name="text_new_password">Nova senha</string>
    <string name="text_confirm_password">Confirme a senha</string>
    <string name="text_change_password">Mudar senha</string>
    <string name="text_name_sign_up">Nome completo</string>
    <string name="text_age_sign_up">Idade</string>
    <string name="text_password">Senha</string>
    <string name="text_register">Registre-se</string>
    <string name="bt_sign_up">Cadastrar</string>
    <string name="bt_ic_eyeslash">Ícone para ver a senha digitada</string>
    <string name="bt_profile">Botão de perfil</string>
    <string name="lb_methodologies">Metodologias</string>
    <string name="lb_activities">Atividades</string>
    <string name="lb_news">Notícias</string>
    <string name="lb_calendar">Calendário</string>
    <string name="lb_work_with_us">Trabalhe Conosco</string>
    <string name="lb_educators_space">Portal do Professor</string>
    <string name="lb_quiz">Quiz</string>
    <string name="lb_human_values">Valores Humanos</string>


</resources>