<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context=".SignUpScreen">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="25dp">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/bt_voltar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/bt_ic_eyeslash"
                    android:src="@drawable/bt_voltar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.044"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.018" />

                <View
                    android:id="@+id/empty"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    app:layout_constraintBottom_toTopOf="@id/logo"
                    app:layout_constraintTop_toBottomOf="@id/bola_azul_superior"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="#E5E5E5"
                    android:contentDescription="@string/contentDescription_logo"
                    android:src="@drawable/logo_eprocad"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/empty" />

                <View
                    android:id="@+id/containerComponents"
                    style="@style/ContainerComponents"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/logo" />

                <EditText
                    android:id="@+id/edit_name_sign_up"
                    style="@style/Edit_Text"
                    android:autofillHints="name"
                    android:drawableStart="@drawable/ic_person"
                    android:hint="@string/text_name_sign_up"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@id/containerComponents"
                    app:layout_constraintStart_toStartOf="@id/containerComponents"
                    app:layout_constraintTop_toTopOf="@id/containerComponents" />

                <EditText
                    android:id="@+id/edit_age"
                    style="@style/Edit_Text"
                    android:autofillHints="creditCardNumber"
                    android:drawableStart="@drawable/ic_calendar"
                    android:hint="@string/text_age_sign_up"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="@id/containerComponents"
                    app:layout_constraintStart_toStartOf="@id/containerComponents"
                    app:layout_constraintTop_toBottomOf="@id/edit_name_sign_up" />

                <EditText
                    android:id="@+id/edit_email_sing_up"
                    style="@style/Edit_Text"
                    android:autofillHints="emailAddress"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="@id/containerComponents"
                    app:layout_constraintStart_toStartOf="@id/containerComponents"
                    app:layout_constraintTop_toBottomOf="@id/edit_age" />

                <EditText
                    android:id="@+id/edit_password_sign_up"
                    style="@style/Edit_Text"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_locker_password"
                    android:hint="@string/text_password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@id/containerComponents"
                    app:layout_constraintStart_toStartOf="@id/containerComponents"
                    app:layout_constraintTop_toBottomOf="@id/edit_email_sing_up" />

                <EditText
                    android:id="@+id/edit_confirm_password_sign_up"
                    style="@style/Edit_Text"
                    android:autofillHints="emailAddress"
                    android:drawableStart="@drawable/ic_locker_password"
                    android:hint="@string/text_confirm_password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@id/containerComponents"
                    app:layout_constraintStart_toStartOf="@id/containerComponents"
                    app:layout_constraintTop_toBottomOf="@id/edit_password_sign_up" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_sent"
                    style="@style/Button"
                    android:layout_marginTop="20dp"
                    android:text="@string/bt_sign_up"
                    app:layout_constraintEnd_toEndOf="@id/containerComponents"
                    app:layout_constraintStart_toStartOf="@id/containerComponents"
                    app:layout_constraintTop_toBottomOf="@id/edit_confirm_password_sign_up" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@id/containerComponents"
                    app:layout_constraintEnd_toEndOf="@id/containerComponents"
                    app:layout_constraintStart_toStartOf="@id/containerComponents"
                    app:layout_constraintTop_toTopOf="@id/containerComponents"
                    app:layout_constraintVertical_bias="0" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    app:layout_constraintBottom_toTopOf="@id/bola_azul"
                    app:layout_constraintTop_toBottomOf="@id/bt_sent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/bola_azul"
                    android:layout_width="188dp"
                    android:layout_height="188dp"
                    android:contentDescription="@string/contentDescription_Bola_azul_inferior"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bola_azul_inferior"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/bola_amarela"
                    android:layout_width="188dp"
                    android:layout_height="94dp"
                    android:layout_marginStart="108dp"
                    android:contentDescription="@string/contentDescription_Bola_amarela_inferior"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bola_amarela_inferior"
                    app:layout_constraintBottom_toBottomOf="@id/bola_azul"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/bola_azul_superior"
                    android:layout_width="188dp"
                    android:layout_height="188dp"
                    android:contentDescription="@string/contentDescription_Bola_azul_superior"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bola_azul_superior"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="188dp"
                    android:layout_height="94dp"
                    android:layout_marginEnd="108dp"
                    android:contentDescription="@string/contentDescription_Bola_amarela_superior"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bola_amarela_superior"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>