<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context=".LoginScreen">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/empty"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        app:layout_constraintBottom_toTopOf="@id/logo"
                        app:layout_constraintTop_toBottomOf="@id/bola_azul_superior"
                        tools:ignore="MissingConstraints" />

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@color/bg_logo"
                        android:contentDescription="@string/contentDescription_logo"
                        android:src="@drawable/logo_completo"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/empty" />

                    <View
                        android:id="@+id/containerComponents"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_max="350dp"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/logo"
                        app:layout_constraintVertical_bias="0.5"
                        app:layout_constraintWidth_max="550dp" />

                    <EditText
                        android:id="@+id/edit_email"
                        style="@style/Edit_Text"
                        android:paddingStart="12dp"
                        android:autofillHints="emailAddress"
                        android:drawableStart="@drawable/ic_mail"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        app:layout_constraintEnd_toEndOf="@id/containerComponents"
                        app:layout_constraintStart_toStartOf="@id/containerComponents"
                        app:layout_constraintTop_toTopOf="@id/containerComponents" />

                    <EditText
                        android:id="@+id/edit_password"
                        style="@style/Edit_Text"
                        android:autofillHints="password"
                        android:drawableStart="@drawable/ic_locker"
                        android:hint="@string/senha"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="@id/containerComponents"
                        app:layout_constraintStart_toStartOf="@id/containerComponents"
                        app:layout_constraintTop_toBottomOf="@id/edit_email" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/bt_eyeslash"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/bt_ic_eyeslash"
                        android:src="@drawable/ic_eye_off"
                        app:layout_constraintBottom_toBottomOf="@id/edit_password"
                        app:layout_constraintEnd_toEndOf="@id/edit_password"
                        app:layout_constraintTop_toTopOf="@id/edit_password" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_login"
                        style="@style/Button"
                        android:text="@string/bt_entrar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/forgotten_password_id" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/forgotten_password_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/bg_forgotten_password"
                        android:maxWidth="320dp"
                        android:text="@string/bt_forgotten_password"
                        android:textAlignment="center"
                        android:textColor="@color/bt_forgotten_password"
                        app:layout_constraintEnd_toEndOf="@id/containerComponents"
                        app:layout_constraintStart_toStartOf="@id/containerComponents"
                        app:layout_constraintTop_toBottomOf="@id/edit_password" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/create_account_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="#00000000"
                        android:maxWidth="320dp"
                        android:text="@string/bt_create_account"
                        android:textAlignment="center"
                        android:textColor="@color/bt_forgotten_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bt_login" />

                    <ProgressBar
                        android:id="@+id/progressbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/blue_ball_login"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.53" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        app:layout_constraintBottom_toTopOf="@id/bola_azul_inferior"
                        app:layout_constraintTop_toBottomOf="@id/create_account_id"
                        tools:ignore="MissingConstraints" />

                    <ImageView
                        android:id="@+id/bola_azul_inferior"
                        android:layout_width="188dp"
                        android:layout_height="188dp"
                        android:contentDescription="@string/contentDescription_Bola_azul_inferior"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bola_azul_inferior"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:layout_width="188dp"
                        android:layout_height="94dp"
                        android:layout_marginStart="108dp"
                        android:contentDescription="@string/contentDescription_Bola_amarela_inferior"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bola_amarela_inferior"
                        app:layout_constraintBottom_toBottomOf="@id/bola_azul_inferior"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/bola_azul_superior"
                        android:layout_width="188dp"
                        android:layout_height="188dp"
                        android:contentDescription="@string/contentDescription_Bola_azul_superior"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bola_azul_superior"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="188dp"
                        android:layout_height="94dp"
                        android:layout_marginEnd="108dp"
                        android:contentDescription="@string/contentDescription_Bola_amarela_superior"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bola_amarela_superior"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>