<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context=".view.ResetPasswordScreen_2">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="25dp">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/bt_voltar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/bt_ic_eyeslash"
                    android:src="@drawable/bt_voltar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.044"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.018" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="230dp"
                    android:layout_marginEnd="16dp"
                    android:adjustViewBounds="true"
                    android:background="@color/bg_logo"
                    android:contentDescription="@string/contentDescription_logo"
                    android:src="@drawable/logo_completo"
                    app:layout_constraintBottom_toTopOf="@id/containerComponents"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <View
                    android:id="@+id/containerComponents"
                    style="@style/ContainerComponents"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.53" />

                <EditText
                    android:id="@+id/newPassword"
                    style="@style/Edit_Text"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_locker"
                    android:drawableEnd="@drawable/ic_eye_off"
                    android:drawablePadding="8dp"
                    android:hint="@string/text_new_password"
                    android:inputType="textPassword"
                    android:maxWidth="320dp"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    app:layout_constraintEnd_toEndOf="@id/containerComponents"
                    app:layout_constraintStart_toStartOf="@id/containerComponents"
                    app:layout_constraintTop_toTopOf="@id/containerComponents"
                    app:layout_constraintWidth_percent="0.60"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/confirmPassword"
                    style="@style/Edit_Text"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_locker"
                    android:drawableEnd="@drawable/ic_eye_off"
                    android:drawablePadding="8dp"
                    android:hint="@string/text_confirm_password"
                    android:inputType="textPassword"
                    android:maxWidth="320dp"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    app:layout_constraintEnd_toEndOf="@id/containerComponents"
                    app:layout_constraintStart_toStartOf="@id/containerComponents"
                    app:layout_constraintTop_toBottomOf="@id/newPassword"
                    app:layout_constraintWidth_percent="0.60"
                    tools:ignore="TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_id"
                    style="@style/Button"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:maxWidth="320dp"
                    android:text="@string/text_change_password"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/containerComponents"
                    app:layout_constraintStart_toStartOf="@id/containerComponents"
                    app:layout_constraintTop_toBottomOf="@id/confirmPassword"
                    app:layout_constraintWidth_percent="0.45"
                    tools:ignore="TextSizeCheck" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.53" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:layout_width="399dp"
                android:layout_height="379dp"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="-207dp"
                android:layout_marginBottom="-120dp"
                android:contentDescription="@string/contentDescription_Bola_azul_inferior"
                android:scaleType="fitXY"
                android:src="@drawable/bola_azul_inferior" />

            <ImageView
                android:layout_width="194dp"
                android:layout_height="213dp"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="80dp"
                android:layout_marginBottom="-80dp"
                android:contentDescription="@string/contentDescription_Bola_amarela_inferior"
                android:scaleType="fitXY"
                android:src="@drawable/bola_amarela_inferior" />

            <ImageView
                android:layout_width="481dp"
                android:layout_height="380dp"
                android:layout_gravity="end|top"
                android:layout_marginTop="-191dp"
                android:layout_marginEnd="-280dp"
                android:contentDescription="@string/contentDescription_Bola_azul_superior"
                android:scaleType="fitXY"
                android:src="@drawable/bola_azul_superior" />

            <ImageView
                android:layout_width="159dp"
                android:layout_height="155dp"
                android:layout_gravity="end|top"
                android:layout_marginTop="-80dp"
                android:layout_marginEnd="100dp"
                android:contentDescription="@string/contentDescription_Bola_amarela_superior"
                android:scaleType="fitXY"
                android:src="@drawable/bola_amarela_superior" />


        </FrameLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>